--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Order Cell/OrderCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Order Cell/OrderCell.xib
@@ -11,84 +11,116 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="633" id="KGk-i7-Jjw" customClass="OrderCell" customModule="Bazaar_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="1524" height="633"/>
+        <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableOrderCell" id="KGk-i7-Jjw" customClass="OrderCell" customModule="Bazaar_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="1000" height="500"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="1524" height="633"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="1000" height="500"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mTe-uJ-ZVK">
-                        <rect key="frame" x="0.0" y="0.0" width="1524" height="633"/>
+                    <view userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mTe-uJ-ZVK">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="500"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="852" translatesAutoresizingMaskIntoConstraints="NO" id="IQw-Ei-c0c">
-                                <rect key="frame" x="0.0" y="0.0" width="1524" height="123"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="IQw-Ei-c0c">
+                                <rect key="frame" x="73" y="0.0" width="286" height="468"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qQF-Zd-njM" userLabel="Left Stack">
-                                        <rect key="frame" x="0.0" y="0.0" width="630.5" height="123"/>
+                                    <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="qQF-Zd-njM" userLabel="Left Stack">
+                                        <rect key="frame" x="0.0" y="0.0" width="138" height="468"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aYh-jl-fIE" userLabel="Product Image View">
-                                                <rect key="frame" x="0.0" y="0.0" width="630.5" height="82"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="138" height="100"/>
+                                                <accessibility key="accessibilityConfiguration">
+                                                    <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
+                                                </accessibility>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="Y7s-wv-Bnu"/>
+                                                </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="uoq-XW-hLg" userLabel="Name-Brand Label">
-                                                <rect key="frame" x="0.0" y="82" width="630.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="100" width="138" height="347.5"/>
+                                                <accessibility key="accessibilityConfiguration">
+                                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
+                                                </accessibility>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UwG-ug-UY2" userLabel="Price-Status Label">
-                                                <rect key="frame" x="0.0" y="102.5" width="630.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="447.5" width="41.5" height="20.5"/>
+                                                <accessibility key="accessibilityConfiguration">
+                                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
+                                                </accessibility>
                                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="aYh-jl-fIE" firstAttribute="trailing" secondItem="qQF-Zd-njM" secondAttribute="trailingMargin" id="UMq-pl-fFI"/>
+                                            <constraint firstItem="aYh-jl-fIE" firstAttribute="trailing" secondItem="uoq-XW-hLg" secondAttribute="trailing" id="y2b-Mm-aFl"/>
+                                        </constraints>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ihE-te-qyz" userLabel="Right Stack">
-                                        <rect key="frame" x="1482.5" y="0.0" width="41.5" height="123"/>
+                                    <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="ihE-te-qyz" userLabel="Right Stack">
+                                        <rect key="frame" x="148" y="0.0" width="138" height="468"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i3A-s4-Xi5" userLabel="Vendor Label">
-                                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="117"/>
+                                                <accessibility key="accessibilityConfiguration">
+                                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
+                                                </accessibility>
                                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="HfK-3r-haA" userLabel="Amount Label">
-                                                <rect key="frame" x="0.0" y="20.5" width="41.5" height="61.5"/>
+                                                <rect key="frame" x="0.0" y="117" width="41.5" height="117"/>
+                                                <accessibility key="accessibilityConfiguration">
+                                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
+                                                </accessibility>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zMS-LX-1W6" userLabel="Adress Label">
-                                                <rect key="frame" x="0.0" y="82" width="41.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="234" width="41.5" height="117"/>
+                                                <accessibility key="accessibilityConfiguration">
+                                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
+                                                </accessibility>
                                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="KhF-4T-yEA" userLabel="Date-Delivery Date Label">
-                                                <rect key="frame" x="0.0" y="102.5" width="41.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="351" width="41.5" height="117"/>
+                                                <accessibility key="accessibilityConfiguration">
+                                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
+                                                </accessibility>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="i3A-s4-Xi5" secondAttribute="trailing" constant="96.5" id="UsF-Wa-nLD"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="IQw-Ei-c0c" secondAttribute="trailing" id="BXw-Cy-UR1"/>
-                            <constraint firstAttribute="top" secondItem="IQw-Ei-c0c" secondAttribute="top" id="Kap-o1-jv1"/>
-                            <constraint firstAttribute="bottom" secondItem="IQw-Ei-c0c" secondAttribute="bottom" id="feG-zu-lHS"/>
-                            <constraint firstAttribute="leading" secondItem="IQw-Ei-c0c" secondAttribute="leading" id="o2s-8e-0Xv"/>
+                            <constraint firstItem="IQw-Ei-c0c" firstAttribute="top" secondItem="mTe-uJ-ZVK" secondAttribute="top" id="9xd-mY-iia"/>
+                            <constraint firstAttribute="bottom" secondItem="IQw-Ei-c0c" secondAttribute="bottom" id="azy-I0-T6J"/>
+                            <constraint firstItem="IQw-Ei-c0c" firstAttribute="leading" secondItem="mTe-uJ-ZVK" secondAttribute="leading" constant="73" id="jbV-60-FWd"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="mTe-uJ-ZVK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Bt2-b8-Yft"/>
-                    <constraint firstAttribute="top" secondItem="mTe-uJ-ZVK" secondAttribute="top" id="eow-ht-CSk"/>
+                    <constraint firstItem="mTe-uJ-ZVK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="7Ox-jN-kjr"/>
+                    <constraint firstItem="mTe-uJ-ZVK" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="HBK-Dr-Rmn"/>
+                    <constraint firstItem="mTe-uJ-ZVK" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="jYQ-1x-1FK"/>
+                    <constraint firstItem="mTe-uJ-ZVK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-5" id="t6J-eA-g2R"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -101,7 +133,7 @@
                 <outlet property="ProductImage" destination="aYh-jl-fIE" id="gtn-Ly-XhV"/>
                 <outlet property="VendorLabel" destination="i3A-s4-Xi5" id="aq9-RJ-tlY"/>
             </connections>
-            <point key="canvasLocation" x="915.94202898550736" y="127.56696428571428"/>
+            <point key="canvasLocation" x="1047.8260869565217" y="181.47321428571428"/>
         </tableViewCell>
     </objects>
     <resources>
