--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -951,11 +951,11 @@
             <objects>
                 <viewController id="Ghz-qv-MNd" customClass="LoginViewController" customModule="Bazaar_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kDy-OH-hcB">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rKZ-Cf-yGq">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SRL-WQ-xqY" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="725.66666666666663"/>
@@ -1010,7 +1010,7 @@
                                                         </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-- OR --" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oo2-pd-AR1">
-                                                        <rect key="frame" x="159" y="221" width="56.333333333333343" height="18"/>
+                                                        <rect key="frame" x="159" y="220.99999999999994" width="56.333333333333343" height="18"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                         <color key="textColor" red="0.43921568630000002" green="0.43921568630000002" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <nil key="highlightedColor"/>
@@ -3353,6 +3353,9 @@
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z2p-ki-It0">
                                                 <rect key="frame" x="0.0" y="0.0" width="354" height="69.666666666666671"/>
+                                                <connections>
+                                                    <segue destination="eCY-HC-bhc" kind="show" id="SCX-aO-hQx"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -5131,6 +5134,109 @@
             </objects>
             <point key="canvasLocation" x="2061" y="5494"/>
         </scene>
+        <!--Messages View Controller-->
+        <scene sceneID="Ug9-UC-UOY">
+            <objects>
+                <viewController id="eCY-HC-bhc" userLabel="Messages View Controller" customClass="MessagesViewController" customModule="Bazaar_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tUZ-HN-7d5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sd1-Rk-yEt" userLabel="loadingView">
+                                <rect key="frame" x="10" y="117.66666666666669" width="394" height="685.33333333333326"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="3Ro-f6-O7I" userLabel="Activity Indicator">
+                                        <rect key="frame" x="187" y="332.66666666666663" width="20" height="20"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="color" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="3Ro-f6-O7I" firstAttribute="centerX" secondItem="Sd1-Rk-yEt" secondAttribute="centerX" id="9sM-oJ-2sr"/>
+                                    <constraint firstItem="3Ro-f6-O7I" firstAttribute="centerY" secondItem="Sd1-Rk-yEt" secondAttribute="centerY" id="XRw-8g-vau"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hOo-WK-db8">
+                                <rect key="frame" x="10" y="54" width="394" height="53.666666666666657"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="tEE-CF-Dpe">
+                                        <rect key="frame" x="0.0" y="5.3333333333333357" width="39.333333333333336" height="43"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="10"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Messages" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uwT-MD-2cl" userLabel="Label">
+                                        <rect key="frame" x="59.333333333333343" y="15.333333333333329" width="334.66666666666663" height="23"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="tEE-CF-Dpe" firstAttribute="width" secondItem="hOo-WK-db8" secondAttribute="width" multiplier="0.1" id="Wzg-w0-HBX"/>
+                                    <constraint firstItem="tEE-CF-Dpe" firstAttribute="height" secondItem="hOo-WK-db8" secondAttribute="height" multiplier="0.8" id="m0F-48-ZOG"/>
+                                </constraints>
+                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Q5U-5H-rm3" userLabel="Messages Table View">
+                                <rect key="frame" x="10" y="127.66666666666669" width="394" height="685.33333333333326"/>
+                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <color key="sectionIndexBackgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="eCY-HC-bhc" id="rQ9-Gp-W3y"/>
+                                    <outlet property="delegate" destination="eCY-HC-bhc" id="8fo-co-jar"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ezM-Bx-5J2"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ezM-Bx-5J2" firstAttribute="bottom" secondItem="Sd1-Rk-yEt" secondAttribute="bottom" constant="10" id="0xh-di-I4M"/>
+                            <constraint firstItem="ezM-Bx-5J2" firstAttribute="trailing" secondItem="Q5U-5H-rm3" secondAttribute="trailing" constant="10" id="1GN-dw-oQJ"/>
+                            <constraint firstAttribute="trailing" secondItem="hOo-WK-db8" secondAttribute="trailing" constant="10" id="1u0-Gu-xxy"/>
+                            <constraint firstItem="Q5U-5H-rm3" firstAttribute="top" secondItem="hOo-WK-db8" secondAttribute="bottom" constant="20" id="Ml5-1q-Aeo"/>
+                            <constraint firstItem="hOo-WK-db8" firstAttribute="height" secondItem="tUZ-HN-7d5" secondAttribute="height" multiplier="0.06" id="Ouw-FA-qrL"/>
+                            <constraint firstItem="Sd1-Rk-yEt" firstAttribute="trailing" secondItem="Q5U-5H-rm3" secondAttribute="trailing" id="YUd-oD-HiG"/>
+                            <constraint firstItem="Q5U-5H-rm3" firstAttribute="leading" secondItem="ezM-Bx-5J2" secondAttribute="leading" constant="10" id="aN4-sk-LkE"/>
+                            <constraint firstItem="ezM-Bx-5J2" firstAttribute="bottom" secondItem="Q5U-5H-rm3" secondAttribute="bottom" id="acB-MS-xiX"/>
+                            <constraint firstItem="Sd1-Rk-yEt" firstAttribute="top" secondItem="hOo-WK-db8" secondAttribute="bottom" constant="10" id="gDT-zg-CcH"/>
+                            <constraint firstItem="hOo-WK-db8" firstAttribute="top" secondItem="ezM-Bx-5J2" secondAttribute="top" constant="10" id="iF6-BA-zoA"/>
+                            <constraint firstItem="hOo-WK-db8" firstAttribute="leading" secondItem="ezM-Bx-5J2" secondAttribute="leading" constant="10" id="rv3-mG-ZCb"/>
+                            <constraint firstItem="Sd1-Rk-yEt" firstAttribute="leading" secondItem="Q5U-5H-rm3" secondAttribute="leading" id="vD9-iR-w5O"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="npQ-53-YuV"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="3Ro-f6-O7I" id="8pr-Or-cjw"/>
+                        <outlet property="conversationsTableView" destination="Q5U-5H-rm3" id="zFp-1e-1l3"/>
+                        <outlet property="loadingView" destination="Sd1-Rk-yEt" id="Mdi-Id-JGl"/>
+                        <segue destination="Ypc-CN-XK9" kind="show" identifier="messagesToChatSegue" id="yUP-s4-yp6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rex-tX-NVs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3207" y="3358"/>
+        </scene>
+        <!--Chat View Controller-->
+        <scene sceneID="H1X-Xu-Kzt">
+            <objects>
+                <viewController id="Ypc-CN-XK9" customClass="ChatViewController" customModule="Bazaar_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0Vr-cP-IlF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="SA4-dC-RDL"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Nuo-x5-YRx"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yqq-cC-nXW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4381" y="3377"/>
+        </scene>
         <!--Customer My Addresses View Controller-->
         <scene sceneID="EpO-4g-hTu">
             <objects>
@@ -6124,13 +6230,12 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="wg2-uU-39g"/>
-        <segue reference="HSB-zT-ihT"/>
-        <segue reference="iKO-xp-CV1"/>
+        <segue reference="Kxk-JO-T4H"/>
+        <segue reference="nph-r1-0sN"/>
         <segue reference="F5l-V4-YaC"/>
         <segue reference="bek-xH-bIt"/>
         <segue reference="NHr-zy-FFi"/>
-        <segue reference="ybP-Ln-r90"/>
+        <segue reference="Jgp-et-rMS"/>
         <segue reference="PGv-xX-z7j"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
